--- a/test-output/old/Default suite/methods-alphabetical.html
+++ b/test-output/old/Default suite/methods-alphabetical.html
@@ -1,18 +1,14 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="6b6398">  <td>21/03/31 11:21:25</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;AddRemoveTest.browserClose()[pri:0, instance:elementSuite.AddRemoveTest@69b0fd6f]">&lt;&lt;browserClose</td> 
-<td>&nbsp;</td>  <td>main@508198356</td>   <td></td> </tr>
-<tr bgcolor="6b6398">  <td>21/03/31 11:21:25</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;AddRemoveTest.browserClose()[pri:0, instance:elementSuite.AddRemoveTest@69b0fd6f]">&lt;&lt;browserClose</td> 
-<td>&nbsp;</td>  <td>main@508198356</td>   <td></td> </tr>
-<tr bgcolor="6b6398">  <td>21/03/31 11:21:01</td>   <td>-23817</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AddRemoveTest.exclusion()[pri:0, instance:elementSuite.AddRemoveTest@69b0fd6f]">exclusion</td> 
-  <td>main@508198356</td>   <td></td> </tr>
-<tr bgcolor="6b6398">  <td>21/03/31 11:21:24</td>   <td>-680</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AddRemoveTest.inclusion()[pri:0, instance:elementSuite.AddRemoveTest@69b0fd6f]">inclusion</td> 
-  <td>main@508198356</td>   <td></td> </tr>
-<tr bgcolor="6b6398">  <td>21/03/31 11:21:18</td>   <td>-7108</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;AddRemoveTest.initialize()[pri:0, instance:elementSuite.AddRemoveTest@69b0fd6f]">&gt;&gt;initialize</td> 
-<td>&nbsp;</td>  <td>main@508198356</td>   <td></td> </tr>
-<tr bgcolor="6b6398">  <td>21/03/31 11:21:18</td>   <td>-7108</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;AddRemoveTest.initialize()[pri:0, instance:elementSuite.AddRemoveTest@69b0fd6f]">&gt;&gt;initialize</td> 
-<td>&nbsp;</td>  <td>main@508198356</td>   <td></td> </tr>
-<tr bgcolor="6b6398">  <td>21/03/31 11:21:25</td>   <td>100</td> <td>&nbsp;</td><td title="&lt;&lt;AddRemoveTest.killDriverObject()[pri:0, instance:elementSuite.AddRemoveTest@69b0fd6f]">&lt;&lt;killDriverObject</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@508198356</td>   <td></td> </tr>
+<tr bgcolor="7bddad">  <td>21/04/07 15:44:27</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AbstractTestNGCucumberTests.feature(cucumber.api.testng.CucumberFeatureWrapper)[pri:0, instance:cucumberOptions.TestRunner@fa49800]">feature</td> 
+  <td>main@1262854901</td>   <td></td> </tr>
+<tr bgcolor="7bddad">  <td>21/04/07 15:44:27</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AbstractTestNGCucumberTests.feature(cucumber.api.testng.CucumberFeatureWrapper)[pri:0, instance:cucumberOptions.TestRunner@fa49800]">feature</td> 
+  <td>main@1262854901</td>   <td></td> </tr>
+<tr bgcolor="7bddad">  <td>21/04/07 15:44:27</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AbstractTestNGCucumberTests.feature(cucumber.api.testng.CucumberFeatureWrapper)[pri:0, instance:cucumberOptions.TestRunner@fa49800]">feature</td> 
+  <td>main@1262854901</td>   <td></td> </tr>
+<tr bgcolor="7bddad">  <td>21/04/07 15:42:41</td>   <td>-105668</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;AbstractTestNGCucumberTests.setUpClass()[pri:0, instance:cucumberOptions.TestRunner@fa49800]">&gt;&gt;setUpClass</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1262854901</td>   <td></td> </tr>
+<tr bgcolor="7bddad">  <td>21/04/07 15:45:26</td>   <td>59269</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;AbstractTestNGCucumberTests.tearDownClass()[pri:0, instance:cucumberOptions.TestRunner@fa49800]">&lt;&lt;tearDownClass</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1262854901</td>   <td></td> </tr>
 </table>
